Removing tracing library max-levels
Signed-off-by: Glenn Gore <glenn.g@affinidi.com>

--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -50,11 +50,7 @@ sha256 = "1.6"
 time = "0.3"
 tokio = { version = "1.47", features = ["full"] }
 toml = "0.9"
-tracing = { version = "0.1", features = [
-  "max_level_debug",
-  "release_max_level_info",
-  "valuable",
-] }
+tracing = { version = "0.1", features = ["valuable"] }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
   "fmt",
