--- a/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
@@ -25,8 +25,5 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 thiserror = "2.0"
 tokio = { version = "1.47", features = ["full"] }
-tracing = { version = "0.1", features = [
-  "max_level_debug",
-  "release_max_level_info",
-] }
+tracing = "0.1"
 uuid = { version = "1.18", features = ["v4", "fast-rng"] }
