--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [workspace]
 members = [
+  "crates/affinidi-did-resolver/affinidi-did-common",
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk",
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-key",
 
   "crates/affinidi-tdk/common/affinidi-secrets-resolver",
 
@@ -40,12 +42,14 @@ publish = true
 rust-version = "1.88.0"
 
 [workspace.dependencies]
+affinidi-did-common = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-common" }
 affinidi-did-resolver-cache-sdk = { version = "0.5.7", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
   "network",
 ] }
 affinidi-did-resolver-cache-server = { version = "0.5.5", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
 did-example = { version = "0.5.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example" }
 did-peer = { version = "0.6.5", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer" }
+affinidi-did-key = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-key" }
 affinidi-meeting-place = { version = "0.1.11", path = "./crates/affinidi-meeting-place" }
 affinidi-messaging-didcomm = { version = "0.10.9", path = "./crates/affinidi-messaging/affinidi-messaging-didcomm" }
 affinidi-messaging-helpers = { version = "0.10.9", path = "./crates/affinidi-messaging/affinidi-messaging-helpers" }
@@ -55,9 +59,9 @@ affinidi-messaging-mediator-processors = { version = "0.10.8", path = "./crates/
 affinidi-messaging-sdk = { version = "0.11.3", path = "./crates/affinidi-messaging/affinidi-messaging-sdk" }
 affinidi-messaging-text-client = { version = "0.10.9", path = "./crates/affinidi-messaging/affinidi-messaging-text-client" }
 affinidi-tdk = { version = "0.1.14", path = "./crates/affinidi-tdk/affinidi-tdk" }
-affinidi-data-integrity = { version = "0.2.1", path = "./crates/affinidi-tdk/common/affinidi-data-integrity" }
+affinidi-data-integrity = { version = "0.2.2", path = "./crates/affinidi-tdk/common/affinidi-data-integrity" }
 affinidi-did-authentication = { version = "0.1.11", path = "./crates/affinidi-tdk/common/affinidi-did-authentication" }
-affinidi-secrets-resolver = { version = "0.1.18", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
+affinidi-secrets-resolver = { version = "0.2.0", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
 affinidi-tdk-common = { version = "0.1.12", path = "./crates/affinidi-tdk/common/affinidi-tdk-common" }
 
 [profile.release]
