--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -28,11 +28,14 @@ network = [
   "dep:rustls-platform-verifier",
 ]
 did_example = ["dep:did-example"]
+did-jwk = ["dep:did-jwk"]
 
 [dependencies]
 # Affinidi Crates
+affinidi-did-common.workspace = true
 did-peer.workspace = true
 did-example = { workspace = true, optional = true }
+affinidi-did-key.workspace = true
 
 # External Crates
 ahash = "0.8"
@@ -51,8 +54,11 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 serde-wasm-bindgen = "0.6.5"
 sha1 = { version = "0.10", optional = true }
-# ssi = { version = "0.12", features = ["secp384r1"] }
-ssi-dids = { version = "0.2", features = ["secp384r1"] }
+did-ethr = "0.3.2"
+did-jwk = { version = "0.2.1", optional = true }
+did-pkh = "0.3.2"
+did-web = "0.3.4"
+ssi-dids-core = "0.1.3"
 thiserror = "2.0"
 tokio = { version = "1.47", features = ["full"] }
 tokio-rustls = { version = "0.26", optional = true }
@@ -64,6 +70,8 @@ wasm-bindgen-futures = "0.4"
 web-socket = { version = "0.7", optional = true }
 
 [dev-dependencies]
+affinidi-secrets-resolver.workspace = true
+url = "2.5"
 clap = { version = "4.5", features = ["derive"] }
 num-format = "0.4.4"
 number_prefix = "0.4"
