--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example/Cargo.toml
@@ -16,6 +16,7 @@ rust-version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+affinidi-did-common.workspace = true
 ahash = "0.8"
-ssi = { version = "0.12", features = ["secp384r1"] }
+serde_json = "1.0"
 thiserror = "2.0"
