--- a/crates/affinidi-messaging/affinidi-messaging-didcomm/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-didcomm/Cargo.toml
@@ -17,6 +17,7 @@ rust-version.workspace = true
 # Affinidi Crates
 affinidi-secrets-resolver.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
+affinidi-did-common.workspace = true
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
@@ -30,15 +31,10 @@ serde-enum-str = '0.4'
 serde_json = "1.0"
 sha2 = "0.10"
 sha256 = "1.6"
-ssi = { version = "0.12" }
 thiserror = "2.0"
 varint = "0.9"
 tokio = { version = "1.47", features = ["rt", "macros"] }
-tracing = { version = "0.1", features = [
-  "max_level_debug",
-  "release_max_level_info",
-  "valuable",
-] }
+tracing = { version = "0.1", features = ["valuable"] }
 uuid = { version = "1.18", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
