--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-key/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-key/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
 keywords.workspace = true
-publish = false
+publish.workspace = true
 license.workspace = true
 readme = "README.md"
 rust-version.workspace = true
