--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -40,7 +40,7 @@ affinidi-did-key.workspace = true
 # External Crates
 ahash = "0.8"
 base64 = { version = "0.22", optional = true }
-didwebvh-rs = { version = "0.1", features = ["ssi"] }
+# didwebvh-rs = "0.1"
 futures-util = "0.3"
 highway = "1.3.0"
 moka = { version = "0.12", features = ["future"] }
