--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-resolver-cache-sdk"
-version = "0.6.0"
+version = "0.6.1"
 description = "Affinidi DID Resolver SDK"
 edition.workspace = true
 authors.workspace = true
@@ -40,7 +40,7 @@ affinidi-did-key.workspace = true
 # External Crates
 ahash = "0.8"
 base64 = { version = "0.22", optional = true }
-# didwebvh-rs = "0.1"
+didwebvh-rs = "0.1"
 futures-util = "0.3"
 highway = "1.3.0"
 moka = { version = "0.12", features = ["future"] }
