--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-secrets-resolver"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.2.1"
+version = "0.2.2"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -24,12 +24,21 @@ ahash = "0.8"
 base58 = "0.2"
 base64 = "0.22"
 ed25519-dalek = { version = "2.2", features = ["rand_core"], optional = true }
-k256 = { version = "0.13", features = ["ecdsa-core"], optional = true }
+k256 = { version = "0.13", features = [
+  "ecdsa-core",
+  "arithmetic",
+], optional = true }
 multibase = "0.9"
 multihash = "0.19"
-p256 = { version = "0.13", features = ["ecdsa-core"], optional = true }
-p384 = { version = "0.13", features = ["ecdsa-core"], optional = true }
-rand = "0.8"                                                                   # Version conflict because of ed25519-dalek (2.2.0)
+p256 = { version = "0.13", features = [
+  "ecdsa-core",
+  "arithmetic",
+], optional = true }
+p384 = { version = "0.13", features = [
+  "ecdsa-core",
+  "arithmetic",
+], optional = true }
+rand = "0.8" # Version conflict because of ed25519-dalek (2.2.0)
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha2 = "0.10"
