feat: Integrate did-cheqd resolver
Signed-off-by: DaevMithran <daevmithran1999@gmail.com>

--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -35,6 +35,7 @@ did-jwk = ["dep:did-jwk"]
 affinidi-did-common.workspace = true
 did-peer.workspace = true
 did-example = { workspace = true, optional = true }
+did-cheqd = { workspace = true }
 affinidi-did-key.workspace = true
 
 # External Crates
