--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-resolver-cache-sdk"
-version = "0.6.1"
+version = "0.6.2"
 description = "Affinidi DID Resolver SDK"
 edition.workspace = true
 authors.workspace = true
@@ -16,7 +16,7 @@ rust-version.workspace = true
 crate-type = ["rlib", "cdylib"]
 
 [features]
-default = ["local"]
+default = ["local", "did-methods"]
 local = []
 network = [
   "dep:web-socket",
@@ -27,21 +27,24 @@ network = [
   "dep:rustls",
   "dep:rustls-platform-verifier",
 ]
+did-methods = ["did-cheqd", "did-webvh"]
 did_example = ["dep:did-example"]
 did-jwk = ["dep:did-jwk"]
+did-cheqd = ["dep:did-cheqd"]
+did-webvh = ["dep:didwebvh-rs"]
 
 [dependencies]
 # Affinidi Crates
 affinidi-did-common.workspace = true
 did-peer.workspace = true
 did-example = { workspace = true, optional = true }
-did-cheqd = { workspace = true }
+did-cheqd = { workspace = true, optional = true }
 affinidi-did-key.workspace = true
 
 # External Crates
 ahash = "0.8"
 base64 = { version = "0.22", optional = true }
-didwebvh-rs = "0.1"
+didwebvh-rs = { version = "0.1", optional = true }
 futures-util = "0.3"
 highway = "1.3.0"
 moka = { version = "0.12", features = ["future"] }
