--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-cheqd/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-cheqd/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
 keywords.workspace = true
-publish.workspace = true
+publish = false
 license.workspace = true
 readme = "README.md"
 rust-version.workspace = true
@@ -23,4 +23,3 @@ ahash = "0.8"
 serde_json = "1.0"
 thiserror = "2.0"
 url = "2.5"
-
