fixing readme locations
Signed-off-by: Glenn Gore <glenn.g@affinidi.com>

--- a/crates/affinidi-meeting-place/Cargo.toml
+++ b/crates/affinidi-meeting-place/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 description = "Affinidi Meeting Place SDK. Discover and connect with others in a secure and private way."
 edition.workspace = true
 authors.workspace = true
-readme.workspace = true
+readme = "README.md"
 homepage.workspace = true
 license.workspace = true
 keywords = ["ssi", "ATM", "affinidi", "DIDComm"]
