--- a/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
@@ -4,7 +4,7 @@ description = "Common utilities for Affinidi Trust Development Kit."
 version = "0.2.1"
 edition.workspace = true
 authors.workspace = true
-readme.workspace = true
+readme = "README.md"
 homepage.workspace = true
 license.workspace = true
 keywords.workspace = true
