--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -27,10 +27,12 @@ network = [
   "dep:rustls",
   "dep:rustls-platform-verifier",
 ]
-did-methods = ["did-cheqd", "did-webvh"]
+did-methods = ["did-webvh"]
+#did-methods = ["did-cheqd", "did-webvh"]
 did_example = ["dep:did-example"]
 did-jwk = ["dep:did-jwk"]
-did-cheqd = ["dep:did-cheqd"]
+did-cheqd = []
+# did-cheqd = ["dep:did-cheqd"]
 did-webvh = ["dep:didwebvh-rs"]
 
 [dependencies]
@@ -38,7 +40,7 @@ did-webvh = ["dep:didwebvh-rs"]
 affinidi-did-common.workspace = true
 did-peer.workspace = true
 did-example = { workspace = true, optional = true }
-did-cheqd = { workspace = true, optional = true }
+# did-cheqd = { workspace = true, optional = true }
 affinidi-did-key.workspace = true
 
 # External Crates
