--- a/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-tdk"
-version = "0.2.2"
+version = "0.2.3"
 description.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -13,9 +13,10 @@ publish.workspace = true
 rust-version.workspace = true
 
 [features]
-default = ["messaging", "meeting-place"]
+default = ["messaging", "meeting-place", "did-peer"]
 messaging = ["dep:affinidi-messaging-sdk"]
 meeting-place = ["dep:affinidi-meeting-place"]
+did-peer = ["dep:did-peer"]
 
 [dependencies]
 affinidi-did-resolver-cache-sdk.workspace = true
@@ -26,7 +27,7 @@ affinidi-did-authentication.workspace = true
 affinidi-tdk-common.workspace = true
 affinidi-secrets-resolver.workspace = true
 affinidi-meeting-place = { workspace = true, optional = true }
-did-peer.workspace = true
+did-peer = { workspace = true, optional = true }
 affinidi-did-key.workspace = true
 
 # External Crates
