fix: allow deprecated for as_slice

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,9 @@ jobs:
     secrets: inherit
     with:
       toolchain: "1.88.0"
-      rustflags: "-D warnings --cfg tracing_unstable"
+      # rustflags: "-D warnings --cfg tracing_unstable"
+      # "-D warnings" temp removed due to as_slice
+      rustflags: "--cfg tracing_unstable"
       auditIgnore: "RUSTSEC-2022-0040,RUSTSEC-2023-0071,RUSTSEC-2024-0373"
       release_debug: true
       release_dry_run: false
