--- a/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-common"
-version = "0.1.1"
+version = "0.1.2"
 description = "Affinidi DID Library"
 edition.workspace = true
 authors.workspace = true
@@ -16,4 +16,5 @@ rust-version.workspace = true
 # External Crates
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "2.0"
 url = "2.5"
