--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -20,6 +20,11 @@ path = "src/setup_environment/main.rs"
 name = "mediator_administration"
 path = "src/mediator_administration/main.rs"
 
+[[bin]]
+name = "generate_did_web"
+path = "src/generate_did_web/main.rs"
+
+
 [dependencies]
 # Affinidi Crates
 affinidi-did-resolver-cache-sdk = { workspace = true, features = [
