feat: did:web generator helper for self-hosted instance (#137)
* feat: new helper for did:web generation

* fix: default secure connection

* fix: added admin did + rename helper

* fix: deleted old version + updated description

--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -20,6 +20,10 @@ path = "src/setup_environment/main.rs"
 name = "mediator_administration"
 path = "src/mediator_administration/main.rs"
 
+[[bin]]
+name = "generate_mediator_config"
+path = "src/generate_mediator_config/main.rs"
+
 [dependencies]
 # Affinidi Crates
 affinidi-did-resolver-cache-sdk = { workspace = true, features = [
