--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   rust-pipeline:
-    uses: affinidi/pipeline-rust/.github/workflows/release.yaml@main
+    uses: affinidi/pipeline-rust/.github/workflows/release.yaml@feat/rust-security-scanner
     secrets: inherit
     with:
       toolchain: "1.88.0"
