--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,34 @@
-# [workspace]
-# members = [
-#   "crates/affinidi-did-resolver/affinidi-did-common",
-#   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk",
-#   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
-#   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
-#   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-cheqd",
-#   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer",
-#   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key",
+[workspace]
+members = [
+  "crates/affinidi-did-resolver/affinidi-did-common",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-cheqd",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key",
 
-#   "crates/affinidi-tdk/common/affinidi-secrets-resolver",
+  "crates/affinidi-tdk/common/affinidi-secrets-resolver",
 
-#   "crates/affinidi-messaging/affinidi-messaging-didcomm",
+  "crates/affinidi-messaging/affinidi-messaging-didcomm",
 
-#   "crates/affinidi-tdk/common/affinidi-tdk-common",
-#   "crates/affinidi-tdk/common/affinidi-data-integrity",
-#   "crates/affinidi-tdk/common/affinidi-did-authentication",
+  "crates/affinidi-tdk/common/affinidi-tdk-common",
+  "crates/affinidi-tdk/common/affinidi-data-integrity",
+  "crates/affinidi-tdk/common/affinidi-did-authentication",
 
-#   "crates/affinidi-messaging/affinidi-messaging-sdk",
-#   "crates/affinidi-messaging/affinidi-messaging-helpers",
-#   "crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common",
-#   "crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors",
-#   "crates/affinidi-messaging/affinidi-messaging-mediator",
+  "crates/affinidi-messaging/affinidi-messaging-sdk",
+  "crates/affinidi-messaging/affinidi-messaging-helpers",
+  "crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common",
+  "crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors",
+  "crates/affinidi-messaging/affinidi-messaging-mediator",
 
-#   "crates/affinidi-tdk/affinidi-tdk",
+  "crates/affinidi-tdk/affinidi-tdk",
 
-#   "crates/affinidi-meeting-place",
+  "crates/affinidi-meeting-place",
 
-#   "crates/affinidi-messaging/affinidi-messaging-text-client",
-# ]
-# resolver = "3"
+  "crates/affinidi-messaging/affinidi-messaging-text-client",
+]
+resolver = "3"
 
 [workspace.package]
 description = "Affinidi Trust Development Kit. A Rust library for building secure, privacy-preserving, and interoperable applications."
