--- a/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
@@ -27,3 +27,4 @@ thiserror = "2.0"
 tokio = { version = "1.48", features = ["full"] }
 tracing = "0.1"
 uuid = { version = "1.18", features = ["v4", "fast-rng"] }
+async-trait = "0.1.89"
