--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -27,11 +27,11 @@ network = [
   "dep:rustls",
   "dep:rustls-platform-verifier",
 ]
-did-methods = ["did-webvh"]
-#did-methods = ["did-cheqd", "did-webvh"]
+#did-methods = ["did-webvh"]
+did-methods = ["did-cheqd", "did-webvh"]
 did_example = ["dep:did-example"]
 did-jwk = ["dep:did-jwk"]
-did-cheqd = []
+did-cheqd = ["dep:did-resolver-cheqd"]
 # did-cheqd = ["dep:did-cheqd"]
 did-webvh = ["dep:didwebvh-rs"]
 
@@ -40,7 +40,6 @@ did-webvh = ["dep:didwebvh-rs"]
 affinidi-did-common.workspace = true
 did-peer.workspace = true
 did-example = { workspace = true, optional = true }
-# did-cheqd = { workspace = true, optional = true }
 affinidi-did-key.workspace = true
 
 # External Crates
@@ -65,6 +64,7 @@ did-jwk = { version = "0.2.1", optional = true }
 did-pkh = "0.3.2"
 did-web = "0.3.4"
 ssi-dids-core = "0.1.3"
+did-resolver-cheqd = { version = "1.0.1", optional = true }
 thiserror = "2.0"
 tokio = { version = "1.48", features = ["full"] }
 tokio-rustls = { version = "0.26", optional = true }
