--- a/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-common"
-version = "0.1.3"
+version = "0.1.4"
 description = "Affinidi DID Library"
 edition.workspace = true
 authors.workspace = true
@@ -13,6 +13,8 @@ readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
+affinidi-secrets-resolver.workspace = true
+
 # External Crates
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
