--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-data-integrity"
 description = "W3C Data Integrity Implementation"
-version = "0.2.4"
+version = "0.3.0"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -14,6 +14,8 @@ rust-version.workspace = true
 
 [dependencies]
 affinidi-secrets-resolver.workspace = true
+affinidi-did-common.workspace = true
+affinidi-did-resolver-cache-sdk.workspace = true
 
 chrono = { version = "0.4", features = ["serde"] }
 ed25519-dalek = "2.2"
