--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid/Cargo.toml
@@ -13,10 +13,25 @@ license.workspace = true
 readme = "README.md"
 rust-version.workspace = true
 
+[features]
+default = ["did-webvh", "did-cheqd"]
+
+did-cheqd = ["dep:did-resolver-cheqd"]
+did-webvh = ["dep:didwebvh-rs"]
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 affinidi-did-common.workspace = true
+
+didwebvh-rs = { version = "0.1", optional = true }
+did-resolver-cheqd = { version = "1.0.1", optional = true }
+regex = "1.12"
 serde_json = "1.0"
+ssi-dids-core = "0.1.3"
 thiserror = "2.0"
+tracing = "0.1"
+
+[dev-dependencies]
+tokio = { version = "1.48", features = ["full"] }
