--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ rust-version = "1.88.0"
 
 [workspace.dependencies]
 affinidi-did-common = { version = "0.1.4", path = "crates/affinidi-did-resolver/affinidi-did-common" }
-affinidi-did-resolver-cache-sdk = { version = "0.6.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
+affinidi-did-resolver-cache-sdk = { version = "0.6.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", default-features = false, features = [
   "network",
 ] }
 affinidi-did-resolver-cache-server = { version = "0.6.2", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
@@ -62,7 +62,7 @@ affinidi-messaging-mediator-processors = { version = "0.11.0", path = "./crates/
 affinidi-messaging-sdk = { version = "0.12.1", path = "./crates/affinidi-messaging/affinidi-messaging-sdk" }
 affinidi-messaging-text-client = { version = "0.11.0", path = "./crates/affinidi-messaging/affinidi-messaging-text-client" }
 affinidi-tdk = { version = "0.2.7", path = "./crates/affinidi-tdk/affinidi-tdk" }
-affinidi-data-integrity = { version = "0.3.1", path = "./crates/affinidi-tdk/common/affinidi-data-integrity" }
+affinidi-data-integrity = { version = "0.3.2", path = "./crates/affinidi-tdk/common/affinidi-data-integrity" }
 affinidi-did-authentication = { version = "0.2.2", path = "./crates/affinidi-tdk/common/affinidi-did-authentication" }
 affinidi-secrets-resolver = { version = "0.4.0", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
 affinidi-tdk-common = { version = "0.2.3", path = "./crates/affinidi-tdk/common/affinidi-tdk-common" }
