--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-data-integrity"
 description = "W3C Data Integrity Implementation"
-version = "0.3.1"
+version = "0.3.2"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -12,11 +12,18 @@ repository.workspace = true
 publish.workspace = true
 rust-version.workspace = true
 
+[features]
+default = ["all-methods"]
+all-methods = ["affinidi-did-resolver-cache-sdk/did-methods"]
+# WebVH uses data-integrity to resolve VerificationMethod for Verification Proofs
+# Causing a cyclic dependency
+exclude-webvh = ["affinidi-did-resolver-cache-sdk/did-cheqd"]
+
 [dependencies]
+affinidi-did-resolver-cache-sdk = { workspace = true }
+
 affinidi-secrets-resolver.workspace = true
 affinidi-did-common.workspace = true
-affinidi-did-resolver-cache-sdk.workspace = true
-
 chrono = { version = "0.4", features = ["serde"] }
 ed25519-dalek = "2.2"
 multibase = "0.9"
