--- a/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-tdk-common"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.2.3"
+version = "0.2.4"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -21,6 +21,7 @@ affinidi-did-resolver-cache-sdk.workspace = true
 affinidi-did-authentication.workspace = true
 affinidi-secrets-resolver.workspace = true
 did-peer.workspace = true
+affinidi-data-integrity.workspace = true
 
 ahash = "0.8"
 base64 = "0.22"
