--- a/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-common"
-version = "0.1.4"
+version = "0.1.5"
 description = "Affinidi DID Library"
 edition.workspace = true
 authors.workspace = true
@@ -19,4 +19,4 @@ affinidi-secrets-resolver.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
-url = "2.5"
+url = { version = "2.5", features = ["serde"] }
