--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -82,3 +82,6 @@ clap = { version = "4.5", features = ["derive"] }
 num-format = "0.4.4"
 number_prefix = "0.4"
 rayon = "1.11"
+
+[lints]
+workspace = true
