--- a/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-common"
-version = "0.1.5"
+version = "0.2.0"
 description = "Affinidi DID Library"
 edition.workspace = true
 authors.workspace = true
@@ -20,3 +20,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 url = { version = "2.5", features = ["serde"] }
+
+[lints]
+workspace = true
