feat: Add URL field to DID struct with parse-time validation
DID changes:
- Store pre-parsed url::Url in DID struct (guaranteed valid at construction)
- Add DID::url() accessor returning owned Url
- Add DID::build() internal constructor for URL creation
- Remove mutators (set_path, set_query, set_fragment) - DID is now immutable
- Remove base_did() - YAGNI
- Add did:key validation at parse time (multibase, multicodec, key length)

did-key changes:
- Use did.url() for document id and controller
- Use url.set_fragment() for verification method IDs
- Remove Url::parse() calls and associated error handling
- Simplify Error enum (remove lifetime parameter)

Partial updates to did-peer and resolver-cache-sdk for DID type migration.

--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key/Cargo.toml
@@ -13,10 +13,10 @@ readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
-affinidi-secrets-resolver.workspace = true
 affinidi-did-common.workspace = true
+affinidi-encoding.workspace = true
+affinidi-secrets-resolver.workspace = true
 
-base58 = "0.2"
 serde_json = "1.0"
 thiserror = "2.0"
 url = "2.5"
