--- a/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
-affinidi-secrets-resolver.workspace = true
+affinidi-encoding.workspace = true
 
 # External Crates
 serde = { version = "1.0", features = ["derive"] }
