feat: Add rich DIDMethod enum and affinidi-crypto crate
DIDMethod changes:
- Refactor DIDMethod from simple enum to rich enum with parsed data
- Add variants: Ethr, Pkh, Webvh, Cheqd, Scid (in addition to Key, Peer, Web, Jwk)
- Each variant contains identifier plus method-specific parsed fields
- Parse-time validation for all supported methods

affinidi-crypto crate:
- New crate for cryptographic primitives and JWK types
- Extract from affinidi-secrets-resolver for cleaner dependencies
- Ed25519/X25519 key generation and conversion
- P-256, P-384, secp256k1 key operations
- JWK types (RFC 7517) with serialization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid",
 
   "crates/affinidi-tdk/common/affinidi-encoding",
+  "crates/affinidi-tdk/common/affinidi-crypto",
   "crates/affinidi-tdk/common/affinidi-secrets-resolver",
 
   "crates/affinidi-messaging/affinidi-messaging-didcomm",
@@ -68,6 +69,7 @@ affinidi-did-authentication = { version = "0.2.3", path = "./crates/affinidi-tdk
 affinidi-secrets-resolver = { version = "0.4.0", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
 affinidi-tdk-common = { version = "0.3.0", path = "./crates/affinidi-tdk/common/affinidi-tdk-common" }
 affinidi-encoding = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-encoding" }
+affinidi-crypto = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-crypto" }
 
 # External crates
 bs58 = "0.5"
