feat: Consolidate did:peer and did:key into affinidi-did-common
Migrate DID method implementations into the common crate, eliminating
separate crates and providing a unified API.

Changes:
- Add DID::generate_peer() and DID::resolve() for did:peer (numalgo 0, 2)
- Add Document::expand_peer_keys() via DocumentExt trait
- Add peer types: PeerCreateKey, PeerService, PeerKeyPurpose, etc.
- Update all consumers to use new affinidi-did-common API
- Remove did-peer and affinidi-did-key crates from workspace

API migration:
- DIDPeer::create_peer_did() -> DID::generate_peer()
- DIDPeer.resolve() -> did.resolve()
- DIDPeerKeys -> PeerKeyPurpose (in did-common) / PeerKeyRole (in TDK)
- DIDKey::generate() -> DID::generate_key()

--- a/crates/affinidi-messaging/affinidi-messaging-didcomm/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-didcomm/Cargo.toml
@@ -15,6 +15,7 @@ rust-version.workspace = true
 
 [dependencies]
 # Affinidi Crates
+affinidi-crypto.workspace = true
 affinidi-secrets-resolver.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
 affinidi-did-common.workspace = true
