--- a/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
@@ -19,8 +19,8 @@ messaging = []
 [dependencies]
 affinidi-did-resolver-cache-sdk.workspace = true
 affinidi-did-authentication.workspace = true
+affinidi-did-common.workspace = true
 affinidi-secrets-resolver.workspace = true
-did-peer.workspace = true
 affinidi-data-integrity.workspace = true
 
 ahash = "0.8"
