--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ members = [
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk",
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
-  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer",
-  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid",
 
   "crates/affinidi-tdk/common/affinidi-encoding",
@@ -51,9 +49,7 @@ affinidi-did-resolver-cache-sdk = { version = "0.6.5", path = "crates/affinidi-d
 ] }
 affinidi-did-resolver-cache-server = { version = "0.6.2", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
 did-example = { version = "0.5.5", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example" }
-did-peer = { version = "0.7.5", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer" }
 did-cheqd = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-cheqd" }
-affinidi-did-key = { version = "0.1.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key" }
 did-scid = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid" }
 affinidi-meeting-place = { version = "0.2.2", path = "./crates/affinidi-meeting-place" }
 affinidi-messaging-didcomm = { version = "0.11.4", path = "./crates/affinidi-messaging/affinidi-messaging-didcomm" }
@@ -69,7 +65,7 @@ affinidi-did-authentication = { version = "0.2.3", path = "./crates/affinidi-tdk
 affinidi-secrets-resolver = { version = "0.4.0", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
 affinidi-tdk-common = { version = "0.3.0", path = "./crates/affinidi-tdk/common/affinidi-tdk-common" }
 affinidi-encoding = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-encoding" }
-affinidi-crypto = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-crypto" }
+affinidi-crypto = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-crypto", default-features = false }
 
 # External crates
 bs58 = "0.5"
