--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -14,32 +14,20 @@ rust-version.workspace = true
 
 [features]
 default = ["p256", "k256", "p384", "ed25519"]
-p256 = ["dep:p256"]
-k256 = ["dep:k256"]
-p384 = ["dep:p384"]
-ed25519 = ["dep:ed25519-dalek"]
+p256 = ["affinidi-crypto/p256"]
+k256 = ["affinidi-crypto/k256"]
+p384 = ["affinidi-crypto/p384"]
+ed25519 = ["affinidi-crypto/ed25519"]
 
 [dependencies]
+affinidi-crypto.workspace = true
 affinidi-encoding.workspace = true
 ahash = "0.8"
 base58 = "0.2"
 base64 = "0.22"
-ed25519-dalek = { version = "2.2", features = ["rand_core"], optional = true }
-k256 = { version = "0.13", features = [
-  "ecdsa-core",
-  "arithmetic",
-], optional = true }
 multibase = "0.9"
 multihash = "0.19"
-p256 = { version = "0.13", features = [
-  "ecdsa-core",
-  "arithmetic",
-], optional = true }
-p384 = { version = "0.13", features = [
-  "ecdsa-core",
-  "arithmetic",
-], optional = true }
-rand = "0.8" # Version conflict because of ed25519-dalek (2.2.0)
+rand = "0.8"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha2 = "0.10"
