DID Resolver Consolidation (#177)
* feat: Add affinidi-encoding crate for multibase/multicodec utilities

Extract encoding utilities into a dedicated crate:
- multibase: base58btc encoding/decoding with 'z' prefix
- multicodec: varint-prefixed codec encoding with Codec enum
- Moved from affinidi-secrets-resolver, which now re-exports

This provides a foundation for DID validation at parse time.

* feat: Add URL field to DID struct with parse-time validation

DID changes:
- Store pre-parsed url::Url in DID struct (guaranteed valid at construction)
- Add DID::url() accessor returning owned Url
- Add DID::build() internal constructor for URL creation
- Remove mutators (set_path, set_query, set_fragment) - DID is now immutable
- Remove base_did() - YAGNI
- Add did:key validation at parse time (multibase, multicodec, key length)

did-key changes:
- Use did.url() for document id and controller
- Use url.set_fragment() for verification method IDs
- Remove Url::parse() calls and associated error handling
- Simplify Error enum (remove lifetime parameter)

Partial updates to did-peer and resolver-cache-sdk for DID type migration.

* feat: Add rich DIDMethod enum and affinidi-crypto crate

DIDMethod changes:
- Refactor DIDMethod from simple enum to rich enum with parsed data
- Add variants: Ethr, Pkh, Webvh, Cheqd, Scid (in addition to Key, Peer, Web, Jwk)
- Each variant contains identifier plus method-specific parsed fields
- Parse-time validation for all supported methods

affinidi-crypto crate:
- New crate for cryptographic primitives and JWK types
- Extract from affinidi-secrets-resolver for cleaner dependencies
- Ed25519/X25519 key generation and conversion
- P-256, P-384, secp256k1 key operations
- JWK types (RFC 7517) with serialization

* feat: Add KeyMaterial to did-common and DID::generate_key()

- Add key.rs module with KeyMaterial struct (key management for DIDs)
- KeyMaterial includes generation, JWK conversion, multibase encoding
- Add DID::generate_key(KeyType) 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ members = [
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk",
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
-  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer",
-  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid",
 
+  "crates/affinidi-tdk/common/affinidi-encoding",
+  "crates/affinidi-tdk/common/affinidi-crypto",
   "crates/affinidi-tdk/common/affinidi-secrets-resolver",
 
   "crates/affinidi-messaging/affinidi-messaging-didcomm",
@@ -43,29 +43,32 @@ publish = true
 rust-version = "1.88.0"
 
 [workspace.dependencies]
-affinidi-did-common = { version = "0.2.0", path = "crates/affinidi-did-resolver/affinidi-did-common" }
-affinidi-did-resolver-cache-sdk = { version = "0.6.5", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
+affinidi-did-common = { version = "0.3.0", path = "crates/affinidi-did-resolver/affinidi-did-common" }
+affinidi-did-resolver-cache-sdk = { version = "0.7.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
   "network",
 ] }
 affinidi-did-resolver-cache-server = { version = "0.6.2", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
 did-example = { version = "0.5.5", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example" }
-did-peer = { version = "0.7.5", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer" }
 did-cheqd = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-cheqd" }
-affinidi-did-key = { version = "0.1.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/affinidi-did-key" }
 did-scid = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid" }
 affinidi-meeting-place = { version = "0.2.2", path = "./crates/affinidi-meeting-place" }
-affinidi-messaging-didcomm = { version = "0.11.4", path = "./crates/affinidi-messaging/affinidi-messaging-didcomm" }
-affinidi-messaging-helpers = { version = "0.11.3", path = "./crates/affinidi-messaging/affinidi-messaging-helpers" }
+affinidi-messaging-didcomm = { version = "0.11.5", path = "./crates/affinidi-messaging/affinidi-messaging-didcomm" }
+affinidi-messaging-helpers = { version = "0.11.4", path = "./crates/affinidi-messaging/affinidi-messaging-helpers" }
 affinidi-messaging-mediator = { version = "0.11.4", path = "./crates/affinidi-messaging/affinidi-messaging-mediator" }
 affinidi-messaging-mediator-common = { version = "0.11.1", path = "./crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common" }
 affinidi-messaging-mediator-processors = { version = "0.11.0", path = "./crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors" }
 affinidi-messaging-sdk = { version = "0.14.0", path = "./crates/affinidi-messaging/affinidi-messaging-sdk" }
-affinidi-messaging-text-client = { version = "0.11.3", path = "./crates/affinidi-messaging/affinidi-messaging-text-client" }
-affinidi-tdk = { version = "0.3.0", path = "./crates/affinidi-tdk/affinidi-tdk" }
+affinidi-messaging-text-client = { version = "0.11.4", path = "./crates/affinidi-messaging/affinidi-messaging-text-client" }
+affinidi-tdk = { version = "0.4.0", path = "./crates/affinidi-tdk/affinidi-tdk" }
 affinidi-data-integrity = { version = "0.3.4", path = "./crates/affinidi-tdk/common/affinidi-data-integrity" }
 affinidi-did-authentication = { version = "0.2.3", path = "./crates/affinidi-tdk/common/affinidi-did-authentication" }
-affinidi-secrets-resolver = { version = "0.4.0", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
+affinidi-secrets-resolver = { version = "0.5.0", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
 affinidi-tdk-common = { version = "0.3.0", path = "./crates/affinidi-tdk/common/affinidi-tdk-common" }
+affinidi-encoding = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-encoding" }
+affinidi-crypto = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-crypto", default-features = false }
+
+# External crates
+bs58 = "0.5"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
