--- a/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-did-authentication"
 description = "Using proof of DID ownership to authenticate to services"
-version = "0.2.3"
+version = "0.2.4"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -20,10 +20,10 @@ affinidi-secrets-resolver.workspace = true
 
 base64 = "0.22"
 chrono = "0.4"
-reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
+reqwest = { version = "0.13", features = ["rustls", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 thiserror = "2.0"
-tokio = { version = "1.48", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 tracing = "0.1"
-uuid = { version = "1.18", features = ["v4", "fast-rng"] }
+uuid = { version = "1.20", features = ["v4", "fast-rng"] }
